compiler/testData/cli/jvm/inapplicableLateinitModifier.out
compiler/testData/cli/jvm/inapplicableLateinitModifier.kt:6:1: error: 'lateinit' modifier 'is not allowed on delegated properties'.
lateinit var kest by Delegate
^^^^^^^^
compiler/testData/cli/jvm/inapplicableLateinitModifier.kt:9:5: error: 'lateinit' modifier 'is allowed only on mutable properties'.
    lateinit val fest = "10"
    ^^^^^^^^
compiler/testData/cli/jvm/inapplicableLateinitModifier.kt:9:5: error: 'lateinit' modifier 'is not allowed on properties with initializer'.
    lateinit val fest = "10"
    ^^^^^^^^
compiler/testData/cli/jvm/inapplicableLateinitModifier.kt:11:5: error: 'lateinit' modifier 'is not allowed on properties of a type with nullable upper bound'.
    lateinit var xest: String?
    ^^^^^^^^
compiler/testData/cli/jvm/inapplicableLateinitModifier.kt:12:5: error: 'lateinit' modifier 'is not allowed on properties of primitive types'.
    lateinit var nest: Int
    ^^^^^^^^
compiler/testData/cli/jvm/inapplicableLateinitModifier.kt:13:5: error: 'lateinit' modifier 'is allowed only on mutable properties'.
    lateinit val dest: String
    ^^^^^^^^
compiler/testData/cli/jvm/inapplicableLateinitModifier.kt:13:5: error: 'lateinit' modifier 'is not allowed on properties with a custom getter or setter'.
    lateinit val dest: String
    ^^^^^^^^
compiler/testData/cli/jvm/inapplicableLateinitModifier.kt:18:5: error: 'lateinit' modifier 'is not allowed on properties of a type with nullable upper bound'.
    lateinit var best: T
    ^^^^^^^^
compiler/testData/cli/jvm/inapplicableLateinitModifier.kt:23:5: error: 'lateinit' modifier 'is not allowed on local variables with initializer'.
    lateinit var b: B<String> = B()
    ^^^^^^^^
COMPILATION_ERROR
